@@ -1,11 +1,15 @@
 package uk.co.ogauthority.pathfinder.service.project.collaborationopportunities;
 
-import static java.util.Map.entry;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -14,6 +18,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 import uk.co.ogauthority.pathfinder.model.entity.project.ProjectDetail;
 import uk.co.ogauthority.pathfinder.model.view.collaborationopportunity.CollaborationOpportunityView;
 import uk.co.ogauthority.pathfinder.model.view.summary.ProjectSectionSummary;
+import uk.co.ogauthority.pathfinder.service.difference.DifferenceService;
 import uk.co.ogauthority.pathfinder.testutil.CollaborationOpportunityTestUtil;
 import uk.co.ogauthority.pathfinder.testutil.ProjectUtil;
 
@@ -23,6 +28,9 @@ public class CollaborationOpportunitiesSectionSummaryServiceTest {
   @Mock
   private CollaborationOpportunitiesSummaryService collaborationOpportunitiesSummaryService;
 
+  @Mock
+  private DifferenceService differenceService;
+
   private final ProjectDetail projectDetail = ProjectUtil.getProjectDetails();
 
   private CollaborationOpportunitiesSectionSummaryService collaborationOpportunitiesSectionSummaryService;
@@ -30,7 +38,8 @@ public class CollaborationOpportunitiesSectionSummaryServiceTest {
   @Before
   public void setup() {
     collaborationOpportunitiesSectionSummaryService = new CollaborationOpportunitiesSectionSummaryService(
-        collaborationOpportunitiesSummaryService
+        collaborationOpportunitiesSummaryService,
+        differenceService
     );
   }
 
@@ -49,43 +58,84 @@ public class CollaborationOpportunitiesSectionSummaryServiceTest {
   }
 
   @Test
-  public void getSummary_whenOpportunities_thenViewsPopulated() {
+  public void getSummary_whenOpportunities() {
 
     final var collaborationOpportunityView1 = CollaborationOpportunityTestUtil.getView(1, true);
     final var collaborationOpportunityView2 = CollaborationOpportunityTestUtil.getView(2, true);
+    final var previousCollaborationOpportunityViews = List.of(collaborationOpportunityView1, collaborationOpportunityView2);
 
-    when(collaborationOpportunitiesSummaryService.getSummaryViews(projectDetail)).thenReturn(
-        List.of(collaborationOpportunityView1, collaborationOpportunityView2)
-    );
+    final var collaborationOpportunityView3 = CollaborationOpportunityTestUtil.getView(3, true);
+    final var currentCollaborationOpportunityViews = List.of(collaborationOpportunityView3);
+
+    when(collaborationOpportunitiesSummaryService.getSummaryViews(projectDetail)).thenReturn(currentCollaborationOpportunityViews);
+    when(collaborationOpportunitiesSummaryService.getSummaryViews(
+        projectDetail.getProject(),
+        projectDetail.getVersion() - 1
+    )).thenReturn(previousCollaborationOpportunityViews);
 
     final var sectionSummary = collaborationOpportunitiesSectionSummaryService.getSummary(projectDetail);
-
-    assertModelProperties(sectionSummary, List.of(collaborationOpportunityView1, collaborationOpportunityView2));
+    assertModelProperties(sectionSummary);
+    assertInteractions(currentCollaborationOpportunityViews, previousCollaborationOpportunityViews);
   }
 
   @Test
   public void getSummary_whenNoOpportunities_thenEmptyViewList() {
 
     when(collaborationOpportunitiesSummaryService.getSummaryViews(projectDetail)).thenReturn(Collections.emptyList());
+    when(collaborationOpportunitiesSummaryService.getSummaryViews(
+        projectDetail.getProject(),
+        projectDetail.getVersion() - 1
+    )).thenReturn(Collections.emptyList());
 
     final var sectionSummary = collaborationOpportunitiesSectionSummaryService.getSummary(projectDetail);
 
-    assertModelProperties(sectionSummary, List.of());
+    assertModelProperties(sectionSummary);
+    assertInteractions(Collections.emptyList(), Collections.emptyList());
   }
 
-  private void assertModelProperties(ProjectSectionSummary sectionSummary,
-                                     List<CollaborationOpportunityView> collaborationOpportunityViews) {
+ private void assertModelProperties(ProjectSectionSummary sectionSummary) {
     assertThat(sectionSummary.getDisplayOrder()).isEqualTo(CollaborationOpportunitiesSectionSummaryService.DISPLAY_ORDER);
     assertThat(sectionSummary.getSidebarSectionLinks()).isEqualTo(List.of(CollaborationOpportunitiesSectionSummaryService.SECTION_LINK));
     assertThat(sectionSummary.getTemplatePath()).isEqualTo(CollaborationOpportunitiesSectionSummaryService.TEMPLATE_PATH);
 
     var model = sectionSummary.getTemplateModel();
 
-    assertThat(model).containsOnly(
-        entry("sectionTitle", CollaborationOpportunitiesSectionSummaryService.PAGE_NAME),
-        entry("sectionId", CollaborationOpportunitiesSectionSummaryService.SECTION_ID),
-        entry("collaborationOpportunityViews", collaborationOpportunityViews)
+    assertThat(model).containsOnlyKeys(
+        "sectionTitle",
+        "sectionId",
+        "collaborationOpportunityDiffModel"
     );
+
+    assertThat(model).containsEntry("sectionTitle", CollaborationOpportunitiesSectionSummaryService.PAGE_NAME);
+    assertThat(model).containsEntry("sectionId", CollaborationOpportunitiesSectionSummaryService.SECTION_ID);
+  }
+
+  private void assertInteractions(List<CollaborationOpportunityView> currentCollaborationOpportunityViews,
+                                  List<CollaborationOpportunityView> previousCollaborationOpportunityViews) {
+
+    currentCollaborationOpportunityViews.forEach(collaborationOpportunityView -> {
+
+      var previousCollaborationOpportunityView = previousCollaborationOpportunityViews
+          .stream()
+          .filter(view -> view.getDisplayOrder().equals(collaborationOpportunityView.getDisplayOrder()))
+          .findFirst()
+          .orElse(new CollaborationOpportunityView());
+
+      verify(differenceService, times(1)).differentiate(
+          collaborationOpportunityView,
+          previousCollaborationOpportunityView,
+          Set.of("summaryLinks", "uploadedFileViews")
+      );
+
+      verify(differenceService, times(1)).differentiateComplexLists(
+          eq(collaborationOpportunityView.getUploadedFileViews()),
+          eq(previousCollaborationOpportunityView.getUploadedFileViews()),
+          eq(Set.of("fileUploadedTime")),
+          any(),
+          any()
+      );
+
+    });
   }
 
 }
